# liberado-pdf-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
crates/mcp-pdf-core/: Cargo.toml
crates/mcp-pdf-core/src/: error.rs  input.rs  lib.rs  output.rs
crates/mcp-pdf-native/: Cargo.toml
crates/mcp-pdf-native/src/: compress.rs  extract.rs  info.rs  lib.rs  merge.rs  ocr_native.rs  remove.rs  rotate.rs  search.rs  split.rs  test_utils.rs  text.rs
crates/mcp-pdf-server/: Cargo.toml  build.rs
crates/mcp-pdf-server/src/: config.rs  lib.rs  main.rs  server.rs
crates/mcp-pdf-server/tests/: dogfood_test.rs  integration_test.rs  stirling_integration_test.rs
crates/mcp-pdf-stirling/: Cargo.toml
crates/mcp-pdf-stirling/src/: client.rs  config.rs  convert.rs  lib.rs  ocr.rs  watermark.rs
