[package]
name = "mcp-pdf-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
test-utils = []

[dependencies]
mcp-pdf-core = { path = "../mcp-pdf-core" }
lopdf.workspace = true
base64.workspace = true
glob.workspace = true
strsim.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
